assets/src/components/routes/ActionWrapper/Action.css
/* ... */
.fullscreen-transformation__sample--open .fullscreen-transformation__sample-full-name,
.fullscreen-transformation__sample:hover .fullscreen-transformation__sample-full-name,
.fullscreen-transformation__sample--open .fullscreen-transformation__sample-id,
.fullscreen-transformation__sample:hover .fullscreen-transformation__sample-id,
.fullscreen-transformation__sample--open .fullscreen-transformation__sample-email,
.fullscreen-transformation__sample:hover .fullscreen-transformation__sample-email {
	color: var(--sl-color-primary-950);
}

.fullscreen-transformation__sample-source {
	background: #fafbff;
	padding: 20px 30px;
}

.fullscreen-transformation__sample-source span[data-excluded],
.fullscreen-transformation__sample-source span[data-excluded] > span {
	color: #c3c3c3 !important;
}

.fullscreen-transformation__no-sample,
.fullscreen-transformation__query-execution {
	color: var(--sl-color-neutral-200);
	padding: 20px 30px;
	text-align: center;
}

.fullscreen-transformation__no-sample sl-icon,
.fullscreen-transformation__query-execution sl-icon {
	font-size: 40px;
	color: var(--sl-color-neutral-400);
}

.fullscreen-transformation__no-sample-text,
.fullscreen-transformation__query-execution-text {
	display: block;
	max-width: 280px;
	margin: 0 auto;
	color: var(--sl-color-neutral-500);
}

.fullscreen-transformation__event-listener-body {
	margin-top: 0;
}

.fullscreen-transformation__query-execution-button {
	margin-top: 15px;
}

.fullscreen-transformation__event-listener-list {
	min-height: 100%;
}

.fullscreen-transformation__event-listener-no-event {
	padding: 30px;
	text-align: center;
	font-size: 14px;
	opacity: 0.7;
}

.fullscreen-transformation__event-listener-loading-ellipsis > span {
	animation: loading-ellipsis 1000ms infinite;
	animation-fill-mode: both;
}

.fullscreen-transformation__event-listener-ellipsis2 {
	animation-delay: 200ms !important;
}

.fullscreen-transformation__event-listener-ellipsis3 {
	animation-delay: 400ms !important;
}

.fullscreen-transformation__event-listener-body {
	overflow: auto;
}

.fullscreen-transformation__event:first-child {
	border-top: 0;
}

.fullscreen-transformation__event {
	padding: 18px 20px;
	border-top: 1px solid var(--border-primary);
	font-size: 13px;
	display: flex;
	gap: 10px;
	cursor: pointer;
	animation: events-fade-in 500ms;
	animation-fill-mode: both;
	transition: background-color 500ms;
	user-select: none;
}

.fullscreen-transformation__event:hover,
.fullscreen-transformation__event--open {
	background-color: var(--sl-color-primary-50);
}

.fullscreen-transformation__event:hover,
.fullscreen-transformation__event:hover .fullscreen-transformation__event-name,
.fullscreen-transformation__event:hover .fullscreen-transformation__event-time,
.fullscreen-transformation__event--open,
.fullscreen-transformation__event--open .fullscreen-transformation__event-name,
.fullscreen-transformation__event--open .fullscreen-transformation__event-time {
	color: var(--sl-color-primary-950);
}

.fullscreen-transformation__event--open:last-child {
	border-bottom-left-radius: var(--radius);
}

.fullscreen-transformation__event-name {
	font-weight: 600;
}

.fullscreen-transformation__event-time {
	width: 100%;
	text-align: right;
}

.fullscreen-transformation__event-run {
	font-size: 21px;
	color: var(--sl-color-primary-700);
	visibility: hidden;
}

.fullscreen-transformation__event:hover .fullscreen-transformation__event-run,
.fullscreen-transformation__event--last-executed .fullscreen-transformation__event-run {
	visibility: visible;
}

.fullscreen-transformation__event-run::part(base) {
	padding: 0;
	padding-left: 5px;
}

.fullscreen-transformation__event-source {
	padding: 20px;
	background-color: #fafbff;
}

.fullscreen-transformation__output-panel sl-spinner {
	display: block;
	margin: 15px auto;
}

.fullscreen-transformation__output-code {
	padding: 40px 30px 20px 30px;
	position: relative;
	height: 100%;
}

.fullscreen-transformation__output-clear {
	position: absolute;
	right: 10px;
	top: 5px;
}

.fullscreen-transformation__output-success {
	white-space: pre;
	font-family: var(--monospace-fonts);
}

.fullscreen-transformation__output-error {
	white-space: pre-wrap;
	font-family: var(--monospace-fonts);
	color: var(--sl-color-danger-600);
}

.fullscreen-transformation__output-placeholder {
	color: var(--sl-color-neutral-200);
	padding: 20px 30px;
	text-align: center;
}

.fullscreen-transformation__output-placeholder sl-icon {
	font-size: 40px;
	color: var(--sl-color-neutral-400);
}

.fullscreen-transformation__output-placeholder-text {
	display: block;
	max-width: 280px;
	margin: 10px auto 0 auto;
	color: var(--sl-color-neutral-500);
}

.fullscreen-transformation__right-panel {
	position: relative;
	overflow: auto;
	max-height: 100%;
	background-color: var(--bg-gray);
}

.fullscreen-transformation__editor-panel {
	position: relative;
	height: 100%;
}

.fullscreen-transformation__editor-panel--hide .transformation-box {
	display: none;
}

.fullscreen-transformation__editor-panel-spinner {
	display: block;
	margin: auto;
	position: relative;
	top: 30px;
}

.fullscreen-transformation__editor-panel .transformation-box {
	border-radius: 0;
	box-shadow: none;
	border: 0;
}

.fullscreen-transformation__editor-panel .transformation-box__header {
	background-color: var(--bg-gray);
	border-radius: 0;
	height: 60px;
	border-top: 1px solid var(--border-primary);
	border-bottom: 2px solid var(--border-primary);
	position: sticky;
	top: 0;
	left: 0;
	z-index: 10;
}

.fullscreen-transformation__editor-panel .transformation-box__header-title {
	transition: opacity 0s;
	opacity: 1;
}

.transformation-box--is-fullscreen-animating .transformation-box__header-title {
	transition: opacity 0.2s;
	opacity: 0;
}

.fullscreen-transformation__editor-panel .editor-wrapper {
	border-radius: 0;
	border: 0 !important;
	height: 100%;
	position: relative;
	box-shadow: none !important;
}
/* ... */

